using MediatR;
namespace QuinntyneBrownStewardship.Application.Access;

public sealed record SignOutCommand : IRequest;
